--- a/components/layout/appHeader/AppHeader.module.css
+++ b/components/layout/appHeader/AppHeader.module.css
@@ -1,7 +1,23 @@
 .appHeader {
   width: 100%;
   height: 6rem;
+  display: flex;
+  justify-content: space-between;
   padding: 0 0.5rem 0 0.5rem;
   margin-bottom: 2rem;
-  background-color: indigo;
+  align-items: center;
+}
+
+.appHeaderLink {
+  padding: 0.75rem 1.5rem;
+  border: 1px solid black;
+}
+
+.appHeaderLinkActive {
+  color: white;
+  background-color: var(--primary-color);
+}
+
+.appHeaderTitle {
+  color: var(--primary-color);
 }
